@@ -1,5 +1,6 @@
 cdebconf (0.85) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Initialise all fields of the gtk frontend data. Should fix several
     crashes.
   * Don't crash if display_dummy_main_menu() is called while we don't have a
@@ -7,6 +8,14 @@ cdebconf (0.85) UNRELEASED; urgency=low
     questions at high priority. This is just a hack; Attilio needs to
     investigate the right solution. Reducing the amount of hardcoding of
     main-menu would be nice ...
+
+  [ Tollef Fog Heen ]
+  * When copying questions in debconf-copydb, make sure that the template
+    referred to exists in the target database.
+
+  [ Attilio Fiandrotti ]
+  * Better and more flexible questionbox widget packing system.
+  * The main-menu hack can now be disabled at compile time.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 10 Aug 2005 18:20:15 +0100
 
